<resources>
    <string name="app_name">MaReu App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_add_meeting">AddMeetingActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="AppName">Ma Réu</string>
    <string name="RoomValidator">Veuillez selectionner une salle</string>
    <string name="filter_by_date">Filtrer par date</string>
    <string name="room_selection">Selectionnez une chambre</string>
    <string name="meeting_not_registered">Réunion non enregistrée</string>
    <string name="actionbar_add_meeting">Ma Réu - Ajout de Réunion</string>
    <string name="hour_pattern">HH:mm</string>
    <string name="day_pattern">dd-MM-yyyy</string>
    <string name="slash">/</string>
    <string name="date_choice">Date de réunion choisie :</string>
    <string name="hour_choice">Heure de réunion choisie :</string>
    <string name="two_points">:</string>
    <string name="void_text">""</string>
    <string name="dash"> \u0020-\u0020</string>
    <string name="the_meeting">La réunion : \u0020 </string>
    <string name="registered"> \u0020 a bien étée enregistrée</string>
    <string name="validate_meeting">Valider la réunion</string>
    <string name="choose_meeting">Choisissez la salle de réunion</string>
    <string name="choose_meeting_room_before_validate">Renseignez une salle de réunion avant de valider</string>
    <string name="choose_meeting_participant_before_validate">Selectionnez au moins un participant avant de valider</string>
    <string name="space"> \u0020</string>
    <string name="meeting_topic">Topic de la réunion</string>
    <string name="click_on_calendar">Cliquez sur le calendrier pour définir la date</string>
    <string name="click_on_clock">Cliquez sur l\'horloge pour définir l\'heure</string>
    <string name="participants_to_choose">Selectionnez les participants</string>
    <string name="demo">Demo</string>
    <string name="demonstration">Demonstration</string>
    <string name="all_meetings">Toutes mes réunions</string>
    <string name="filtration_by_place">Filtrer par Lieu</string>
    <string name="filtration_by_date">Filtrer par Date</string>
    <string name="room_Peach">Salle Peach</string>
    <string name="room_Mario">Salle Mario</string>
    <string name="room_Luigi">Salle Luigi</string>
    <string name="comma">, \u0020</string>
    <string name="room_is_deleted">La réunion a été supprimée</string>
    <string name="empty_full_list">La liste de réunion est vide</string>
    <string name="empty_date">Aucune réunion à cette date</string>
    <string name="empty_room">Aucune réunion pour cette salle</string>
    <string name="choose_meeting_name_before_validate">Renseignez un nom de réunion avant de valider</string>
    <string name="cannot_create_same_meeting_twice">Il existe deja un meeting a la meme date pour cette salle </string>


</resources>
