<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_list_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <ImageView
...
        android:layout_margin="12dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/ic_circle_green"
        app:layout_constraintBottom_toBottomOf="@+id/item_meeting_mails"
        app:layout_constraintEnd_toStartOf="@+id/item_meeting_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/item_meeting_name" />

    <TextView
        android:id="@+id/item_meeting_name"
        android:layout_width="260dp"
...
